compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__consts__literal_list_does_not_get_constant_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "pub const a = [1, 2, 3]"
---
----- SOURCE CODE
pub const a = [1, 2, 3]

----- COMPILED JAVASCRIPT
import { toList } from "../gleam.mjs";

export const a = /* @__PURE__ */ toList([1n, 2n, 3n]);
